WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311306
[Site Isolation] Web Inspector: Fix execution-context-in-scriptless-page.html layout test under site isolation
https://bugs.webkit.org/show_bug.cgi?id=311306
Summary
[Site Isolation] Web Inspector: Fix execution-context-in-scriptless-page.html...
Qianlang Chen
Reported
2026-04-01 18:05:43 PDT
Fix this inspector test to work with frame targets and restore test coverage
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-01 18:05:52 PDT
<
rdar://problem/173898659
>
Qianlang Chen
Comment 2
2026-04-01 18:21:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61866
EWS
Comment 3
2026-04-03 15:40:54 PDT
Committed
310540@main
(b9eb9b71e0ec): <
https://commits.webkit.org/310540@main
> Reviewed commits have been landed. Closing PR #61866 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug